@@ -74,6 +74,9 @@ Open Vehicle Monitor System v3 - Change log
 - VW e-Up/OBD: charge start notification delay configuration to accomodate current ramp-up
   New configs:
     [xvu] notify.charge.start.delay       -- in seconds, default 24
+- VW e-Up/OBD: polling control for diagnostic/adaptation sessions
+  New command:
+    xvu polling <status|pause|continue>   -- temporarily pause OBD2 polling
 - New vehicle: Hyundai Ioniq vFL (HIONVFL)
   https://docs.openvehicles.com/en/latest/components/vehicle_hyundai_ioniqvfl/docs/index.html
 - Webserver: support TLS (https, wss) using self-signed certificates
